Name:                yi-bench
Version:             0.1
Synopsis:            Bench framework for yi
-- Description:         
Homepage:            http://haskell.org/haskellwiki/Yi
License:             GPL
License-file:        LICENSE
Author:              Reiner Pope
Maintainer:          reiner.pope@gmail.com
-- Copyright:           
Category:            Development, Editor
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  
  benches/parser/

Cabal-version:       >=1.10


Library
  hs-source-dirs: src
  default-language: Haskell2010

  Exposed-modules:
    Yi.Bench.NFInstances
    Yi.Bench.Parser
    Yi.Bench.Parser.InsertOneChar
  
  -- Packages needed in order to build this package.
  Build-depends:
    base >= 4 && <5,
    containers,
    criterion,
    deepseq,
    derive,
    gtk,
    monads-fd,
    pango,
    yi

  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

Executable bench-parser
  hs-source-dirs: benches/parser
  default-language: Haskell2010

  main-is: Main.hs

  build-depends:
    base >= 4 && <5,
    criterion,
    deepseq,
    yi-bench,
    yi